add common page header with user avatar, notifications badge and name, integrate it to all main pages

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,9 @@
 [data-theme="dark"] .ant-layout-content {
   background: #107bcb;
 }
-> .code-box-demo > .ant-layout + .ant-layout {
+.code-box-demo > .ant-layout + .ant-layout {
   margin-top: 48px;
+}
+.SidenavUserWrapper {
+  display: inline-flex;
 }
