finish app layout v1, tasks page v1

--- a/src/components/Tasks/TasksContents/style.css
+++ b/src/components/Tasks/TasksContents/style.css
@@ -3,7 +3,14 @@
 }
 
 .table {
-  width: calc(100vw - 200px);
   display: block;
   float: right;
+}
+
+.narrowed {
+  width: calc(100% - 200px);
+}
+
+.extended {
+  width: 100%;
 }
