--- a/src/index.scss
+++ b/src/index.scss
@@ -1,89 +1,56 @@
 /* ant design styles */
 @import "antd/dist/antd.css";
-
 /* top parent block */
 #root {
   overflow: hidden visible;
   height: -webkit-fill-available;
 }
-
 .SidenavUserWrapper {
   display: inline-flex;
 }
-
-.imageOpenWrapper {
-  height: 90px;
-  width: 150px;
-  line-height: 90px;
-}
-
-.imageClosedWrapper {
-  height: 90px;
-  width: 0;
-  line-height: 90px;
-}
-
-.imageSidenav {
-  width: inherit;
-  transition: 0.25s ease;
-}
-
 .sidenav {
   width: 200px;
   height: 90px;
-  text-align: -webkit-center;
-  transition: 0.25s ease;
+  text-align: center;
 }
-
-.sidenavClosed {
-  width: 0;
+.imageWrapper {
   height: 90px;
-  text-align: -webkit-center;
-  transition: 0.25s ease;
+  width: 176px;
+  line-height: 90px;
 }
-
-.menuOpen {
-  width: 200px;
-  transition: 0.25s ease;
+.sidenavClosed {
+  display: none;
 }
-
-.menuClosed {
-  width: 0;
-  transition: 0.25s ease;
-}
-
 .avatar {
   background-color: white;
   border: solid gray 3px;
   color: black;
   font-weight: bold;
+  p {
+    line-height: 58px;
+  }
 }
-
-.avatar p {
-  line-height: 58px;
-}
-
-.avatarWithNotifications p {
-  line-height: 58px;
-}
-
 .avatarWithNotifications {
+  p {
+    line-height: 58px;
+  }
   background-color: white;
   border: solid gray 3px;
   color: black;
   font-weight: bold;
 }
-
 .userHeader {
   width: calc(100vw - 200px);
   display: flex;
   justify-content: space-between;
-
   box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
+  h2 {
+    line-height: 69.5px;
+    padding-left: 10px;
+  }
 }
-
 .userHeaderClosed {
   width: 100vw;
   display: flex;
@@ -91,22 +58,14 @@
   box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
+  h2 {
+    line-height: 69.5px;
+    padding-left: 10px;
+  }
 }
-
-.userHeader h2 {
-  line-height: 69.5px;
-  padding-left: 10px;
-}
-
-.userHeaderClosed h2 {
-  line-height: 69.5px;
-  padding-left: 10px;
-}
-
 .menuFoldOutlined {
   font-size: 24px;
 }
-
 .user {
   height: 90%;
   line-height: 67px;
@@ -115,7 +74,6 @@
   padding: 10px 0 0 0;
   margin-right: 2rem;
 }
-
 button {
   display: inline-block;
   border: none;
@@ -130,66 +88,40 @@ button {
   transition: background 250ms ease-in-out, transform 150ms ease;
   -webkit-appearance: none;
   -moz-appearance: none;
+  &:hover {
+    background: #0053ba;
+  }
+  &:focus {
+    background: #0053ba;
+    outline: 1px solid #fff;
+    outline-offset: -1px;
+  }
+  &:active {
+    transform: scale(0.99);
+  }
 }
-
-button:hover,
-button:focus {
-  background: #0053ba;
-}
-
-button:focus {
-  outline: 1px solid #fff;
-  outline-offset: -1px;
-}
-
-button:active {
-  transform: scale(0.99);
-}
-
 .SidenavAndHeader {
   display: inline-flex;
 }
-
-.contentsWrapper {
-  background-color: lavender;
-  display: block;
-  float: right;
-  width: 100%;
-}
-.contentsShrinkedWrapper {
-  background-color: lavender;
-  display: block;
-  float: right;
-  width: calc(100% - 200px);
-}
-
 .contents {
   display: block;
   float: right;
   width: 100%;
-  padding: 15px;
+  h1 {
+    float: inherit;
+  }
 }
-
-.contents h1 {
-  float: inherit;
-}
-
-.contentsShrinked {
-  display: block;
-  float: right;
-  width: calc(100% - 200px);
-}
-
-.contentsShrinked h1 {
-  float: inherit;
-}
-
 .tasksColumn {
   text-align: left;
 }
-
 .table {
   display: block;
   float: right;
   overflow-y: hidden;
+}
+.narrowed {
+  width: calc(100% - 200px);
+}
+.extended {
+  width: 100%;
 }
