--- a/src/index.css
+++ b/src/index.css
@@ -150,7 +150,7 @@ button:active {
 .contentsInnerWrapper {
   padding: 15px;
   width: 100%;
-  height: calc(100vh - 120px);
+  height: calc(100vh - 105px);
   border-radius: 5px;
   background-color: white;
 }
@@ -159,7 +159,7 @@ button:active {
   display: block;
   float: right;
   width: 100%;
-  padding: 15px;
+  padding: 15px 15px 0 15px;
   transition: 0.25s ease;
 }
 .contentsWrapper h1,
